# gigagrad

./: .gitignore  README.md  meson.build  meson.options
.github/workflows/: build.yml
src/: TODO.txt  backend.cpp  backend.h  backend_metal.cpp  backend_metal.h  backend_scalar_c.cpp  backend_scalar_c.h  codegen.cpp  codegen.h  debug_util.cpp  gigagrad_viz_server.cpp  graph.cpp  graph.h  meson.build  optimizations.cpp  optimizations.h  runtime.cpp  runtime.h  training.cpp  training.h
test/: gigagrad-emnist.cpp  graph-test.cpp  matmul_benchmark.cpp
